Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18446

ReactOS Setup shows strange characters when selecting Romanian language

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Setup
    • None

    Description

      When trying to install ReactOS and selecting Romanian language, some strange characters are shown instead of single and double lines. For any other language (except CORE-5052) the interface looks normal. I tried different virtualization solutions (like: Qemu, VirtualBox and VMWare) and the result is the same.

      Reproducible in: reactos-bootcd-0.4.15-dev-5131-g311fcc6.

      I have attached a screenshot.

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              Miloiu Andrei Miloiu Andrei
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: